# Courier

./: .env.example  .gitignore  API_DOCUMENTATION.md  BUILD_AND_RUN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DELIVERY_CHECKLIST.md  DEPLOYMENT.md  DEVELOPMENT_SUMMARY.md  Dockerfile  Openspec vs Superpowers 分析  PHASE4_PLAN.md  PROJECT_SUMMARY.md  Phase4_Day4_Task1_Report.md  README.md  SECURITY.md  VERIFICATION_MANUAL.md  VERIFICATION_PLAN.md  courier-server.service  docker-compose.yml  openapi.json  verify_mvp.sh
.claude/rules/: 01-architecture.md  02-rust-conventions.md  03-frontend-conventions.md  04-git-workflow.md  05-testing.md  06-constraints.md
archive/: PHASE4_DAY3_TASK3_DETAILED_PLAN.md
client/: Cargo.toml
client/src/: config.rs  main.rs  proxy.rs  tunnel_manager.rs
docs/superpowers/plans/: 2026-04-18-claude-md-rules.md  2026-04-19-websocket-realtime.md
docs/superpowers/specs/: 2026-04-18-claude-md-design.md  2026-04-19-openspec-superpowers-integration-design.md
openspec/changes/feat-auth-login/: tasks.md
openspec/changes/feat-websocket-realtime/: proposal.md
reports/: DAY1_REPORT.md  DAY2_VERIFICATION.md  DAY3_TASK1_REPORT.md  DAY3_TASK2_REPORT.md  DAY3_TASK3_TEST_LOG.md  DAY4_TASK1_REPORT.md  DAY4_TASK2_REPORT.md  DAY4_TASK3_REPORT.md  DAY4_TASK4_REPORT.md  MVP_FINAL_REPORT.md  PHASE7_INTEGRATION_REPORT.md  TASK1_API_DOCUMENTATION_REPORT.md  TASK1_BUFFER_OPTIMIZATION_REPORT.md  TASK2_ERROR_HANDLING_REPORT.md  TASK2_PERSISTENT_CONNECTION_REPORT.md  TASK3_TIMEOUT_CONTROL_REPORT.md  TASK3_UI_ENHANCEMENT_REPORT.md  TASK4_AUTH_TOKEN_VERIFICATION_REPORT.md  TASK5_SUBDOMAIN_CONFLICT_DETECTION_REPORT.md  TASK_2_CERT_SCRIPT_REPORT.md  TASK_5.1_REPORT.md  TEST_REPORT.md
scripts/: generate_cert.sh  start-https-proxy.sh  start.sh
server/: Cargo.toml
server/src/: access_log.rs  auth.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  test_helpers.rs  validation.rs  websocket.rs
server/tests/: access_log_test.rs  auth_middleware_test.rs  login_test.rs  ws_auth_test.rs
shared/: Cargo.toml
shared/src/: lib.rs
tests/: integration_test.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.spec.ts  App.vue
web/src/api/: tunnelApi.ts  (+1 more)
(+6 files in other folders)
