[workspace]
members = ["shared", "server", "client"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Courier Team"]
description = "Courier - 高性能内网穿透工具"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio-tungstenite = "0.21"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
clap = { version = "4.3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
