[package]
name = "courier-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Courier - 客户端"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
courier-shared = { path = "../shared" }
hyper = "1.1"
tower = "0.4"
toml = "0.8"
futures = "0.3"
