[package]
name = "courier-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Courier - 服务端"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
courier-shared = { path = "../shared" }
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rustls = "0.21"
rustls-pemfile = "2"
axum-server = { version = "0.5", features = ["tls-rustls"] }
jsonwebtoken = "9"
regex = "1"
futures-util = "0.3"
hyper = { version = "0.14", features = ["client", "http1"] }
tokio-util = "0.7"
rand = "0.8"
subtle = "2"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
tempfile = "3"

